--- a/artikel.html
+++ b/artikel.html
@@ -139,6 +139,7 @@
                 <div id="articleMeta" class="flex items-center space-x-2 text-sm text-gray-500 mb-4">
                     <span id="articleCategory" class="bg-gray-100 text-gray-800 text-sm font-medium px-3 py-1 rounded-full dark:bg-gray-700 dark:text-gray-300">Kategori</span>
                     <span id="articleDate" class="text-sm text-gray-500 dark:text-gray-400">Tanggal</span>
+                    <span id="articleAuthor" class="text-sm text-gray-500 dark:text-gray-400">Penulis</span>
                 </div>
                 <h1 id="articleTitle" class="text-3xl font-bold mb-6 dark:text-white">Judul Artikel</h1>
             </div>
@@ -160,17 +161,17 @@
                     <span class="text-xl font-bold text-blue-500 dark:text-blue-400">Portofolio</span>
                     <p class="text-gray-600 dark:text-gray-400 mt-2">© 2023 John Doe. All rights reserved.</p>
                 </div>
-<div class="flex space-x-6">
-<a href="#" class="social-icon text-gray-500 hover:text-blue-400 dark:hover:text-blue-300">
-<i class="fab fa-telegram text-xl"></i>
-</a>
-<a href="#" class="social-icon text-gray-500 hover:text-blue-600 dark:hover:text-blue-400">
-<i class="fab fa-linkedin-in text-xl"></i>
-</a>
-<a href="#" class="social-icon text-gray-500 hover:text-pink-500 dark:hover:text-pink-400">
-<i class="fab fa-instagram text-xl"></i>
-</a>
-</div>
+                <div class="flex space-x-6">
+                    <a href="#" class="social-icon text-gray-500 hover:text-blue-400 dark:hover:text-blue-300">
+                        <i class="fab fa-telegram text-xl"></i>
+                    </a>
+                    <a href="#" class="social-icon text-gray-500 hover:text-blue-600 dark:hover:text-blue-400">
+                        <i class="fab fa-linkedin-in text-xl"></i>
+                    </a>
+                    <a href="#" class="social-icon text-gray-500 hover:text-pink-500 dark:hover:text-pink-400">
+                        <i class="fab fa-instagram text-xl"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
@@ -191,14 +192,12 @@
             html.classList.toggle('dark');
             localStorage.setItem('darkMode', html.classList.contains('dark') ? 'dark' : 'light');
         });
-
         // Mobile Menu Toggle
         const mobileMenuButton = document.getElementById('mobileMenuButton');
         const mobileMenu = document.getElementById('mobileMenu');
         mobileMenuButton.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
-
         // Smooth scrolling for anchor links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
@@ -214,7 +213,6 @@
                 }
             });
         });
-
         // Animation on scroll
         const fadeElements = document.querySelectorAll('.fade-in');
         const fadeInObserver = new IntersectionObserver((entries) => {
@@ -227,7 +225,6 @@
         fadeElements.forEach(element => {
             fadeInObserver.observe(element);
         });
-
         // Back to Top Button
         const backToTopButton = document.getElementById('backToTop');
         window.addEventListener('scroll', () => {
@@ -243,32 +240,26 @@
                 behavior: 'smooth'
             });
         });
-
         // Dynamic Article Loading
         async function loadArticle() {
             try {
                 // Get article ID from URL
                 const urlParams = new URLSearchParams(window.location.search);
                 const articleId = urlParams.get('id');
-                
                 if (!articleId) {
                     document.getElementById('articleBody').innerHTML = '<p>Artikel tidak ditemukan.</p>';
                     return;
                 }
-
                 // Fetch articles JSON
                 const response = await fetch('articles.json');
                 const data = await response.json();
                 const article = data.articles.find(a => a.id === articleId);
-
                 if (!article) {
                     document.getElementById('articleBody').innerHTML = '<p>Artikel tidak ditemukan.</p>';
                     return;
                 }
-
                 // Update page title
                 document.getElementById('pageTitle').textContent = `${article.title} - Portofolio Pribadi`;
-
                 // Update article content
                 document.getElementById('articleTitle').textContent = article.title;
                 document.getElementById('articleCategory').textContent = article.category.charAt(0).toUpperCase() + article.category.slice(1);
@@ -278,22 +269,21 @@
                     'bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-300'
                 }`;
                 document.getElementById('articleDate').textContent = article.date;
+                document.getElementById('articleAuthor').textContent = `Penulis: ${article.author}`;
                 document.getElementById('articleBody').innerHTML = article.content;
             } catch (error) {
                 console.error('Error loading article:', error);
                 document.getElementById('articleBody').innerHTML = '<p>Terjadi kesalahan saat memuat artikel.</p>';
             }
         }
-
         // Load article when page loads
         window.addEventListener('DOMContentLoaded', loadArticle);
-
-// Disable klik kanan khusus gambar
-document.addEventListener('contextmenu', function(e) {
-  if (e.target.tagName === 'IMG') {
-    e.preventDefault();
-  }
-});
+        // Disable klik kanan khusus gambar
+        document.addEventListener('contextmenu', function(e) {
+            if (e.target.tagName === 'IMG') {
+                e.preventDefault();
+            }
+        });
     </script>
 </body>
 </html>
